@@ -30,7 +30,6 @@ along with opensearch.  If not, see <http://www.gnu.org/licenses/>.
 import dk.dbc.opensearch.common.pluginframework.PluginResolver;
 import dk.dbc.opensearch.common.pluginframework.IPluggable;
 import dk.dbc.opensearch.common.pluginframework.PluginException;
-import dk.dbc.opensearch.common.types.ThrownInfo;
 import dk.dbc.opensearch.common.fedora.IObjectRepository;
 
 import java.io.FileNotFoundException;
