@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11166] "ThrownInfo.java bruges ikke og kan slettes"
    - bug [10734] "XMLDCHarvesterTest skal refaktoreres"
    - bug [11160] "DatadockJob, Job, IJob skal samles til een klasse"
    - bug [11159] "HarvestType enum i common/types skal gøres til privat enum i DatadockMain"
